--- a/index.html
+++ b/index.html
@@ -4,3 +4,5 @@
 <body>
 <h1>Welcome to fullpwn's world!</h1>
   <p>This is in no way finished and probanly wont be finished anytime soon.<p>
+  <h2>What I'm working on,</h2>
+  <p>Trying to make a Miiverse clone for 3DS/2DS</p>
